2006-02-25  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-main-window.c: Remember the order in which
	the notebook tabs are referenced. When closing a tab, switch to
	the tab that was previously in front, not the first tab in the
	notebook. Fixes 332355.

2006-02-24  David Hampton  <hampton@employees.org>

	* src/register/register-gnome/gnucash-sheet.[ch]:
	* src/register/register-gnome/gnucash-item-edit.[ch]:
	* src/gnome/gnc-plugin-page-register.c: Override the generic edit
	menu sensitivity code to provide the right sensitivity for the
	entry widget buried in the register.

	* src/gnome-utils/gnc-main-window.c:
	* src/gnome-utils/gnc-plugin-page.h: Provide a hook for pages to
	override the generic edit menu sensitivity code.

	* src/gnome-utils/ui/gnc-main-window-ui.xml:
	* src/gnome-utils/gnc-main-window.c: Remove unnecessary menu
	item. The same functionality exists in the "Menus & Toolbars"
	preference panel.

2006-02-24  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/import-account-matcher.h: Let the account
	matcher accept a parent widget to avoid windows that are lost
	behind other windows. Adapt importer modules accordingly.

	* src/import-export/import-account-matcher.c: Don't allow
	placeholder be selected for importing transactions. Fixes
	bug#327891.

	* src/import-export/mt940/gnc-mt940-import.c: Get MT940 importer
	compile again (experimental; requires aqbanking-1.9.7). It is not
	yet tested with actual files. Bug#325170.

	* src/import-export/import-account-matcher.h: Make gchar argument
	const because it is only used as a const.

2006-02-23  David Hampton  <hampton@employees.org>

	* src/report/report-system/html-utilities.scm: Andrew
	Sackville-West's to pass the rignt number of arguments to
	gnc:register-guid.

	* src/report/report-gnome/gnc-plugin-page-report.c:
	* src/gnome-utils/gnc-recurrence.c:
	* src/gnome-utils/gnc-plugin-file-history.c:
	* src/gnome-utils/gnc-main-window.c: