@@ -1,3 +1,11 @@
+2006-02-26  Joshua Sled  <jsled@asynchronous.org>
+
+	* src/report/utility-reports/Makefile.am (SCM_FILE_LINKS):
+	* src/report/utility-reports/utility-reports.scm: 
+	* src/report/utility-reports/iframe-url.scm:
+	* doc/tip_of_the_day.list.in: 
+	Remove web browser "report".
+
 2006-02-25  David Hampton  <hampton@employees.org>
 
 	* src/gnome-utils/gnc-main-window.c: Remember the order in which
